# phlite

./: Cargo.toml  LICENSE  README.md
.github/workflows/: phlite_grpph.yml
examples/: grpph.rs
phlite/: Cargo.toml  README.md
phlite/src/: columns.rs  fields.rs  lib.rs  reduction.rs
phlite/src/matrices/: adaptors.rs  combinators.rs  implementors.rs  mod.rs  tests.rs
phlite/src/reduction/: clearing.rs  mod.rs  standard.rs
phlite_grpph/: .gitignore  Cargo.toml  README.md  example.py  infinite_weights.py  phlite_grpph.pyi  pyproject.toml  reps.py
phlite_grpph/examples/: example.py  reps.py
phlite_grpph/src/: boundary.rs  coboundary.rs  lib.rs  main.rs
phlite_py/: Cargo.toml  README.md
phlite_py/src/: lib.rs
phlite_rips/: Cargo.toml  README.md  circle_distance_matrix.py
phlite_rips/src/: README.md  cohomology.rs  homology.rs  lib.rs  main.rs
src/: columns.rs  fields.rs  lib.rs  main.rs  matricies.rs  reduction.rs
src/filtrations/: mod.rs  rips.rs
src/filtrations/grpph/: mod.rs
src/filtrations/rips/: cohomology.rs  homology.rs  mod.rs
src/matrices/: adaptors.rs  combinators.rs  implementors.rs  mod.rs
