[package]
name = "phlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "phlite"
path = "src/lib.rs"

[[bin]]
name = "phlite_cli"
path = "src/main.rs"
required-features = ["build-binary"]

[dependencies]
csv = { version = "1.3.0", optional = true }
itertools = "0.12.1"
ordered-float = "4.2.0"
rustc-hash = "1.1.0"

[features]
default = ["build-binary"]
build-binary = ["csv"]

