[package]
name = "phlite_grpph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phlite_grpph"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "phlite_grpph_cli"
path = "src/main.rs"

[dependencies]
ordered-float = "4.2.0"
petgraph = "0.6.4"
phlite = { version = "0.1.0", default-features = false, path = "../phlite" }
pyo3 = "0.21.2"
pyo3-log = "0.10.0"
rustc-hash = "1.1.0"
